# 2024_GROUP_8

./: .gitignore  CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  ModelPartList_8h_source.html  ModelPart_8cpp.html  ModelPart_8h.html  ModelPart_8h_source.html  README.md  VRRenderThread.cpp  VRRenderThread.h  VRRenderThread_8cpp.html  VRRenderThread_8h.html  VRRenderThread_8h_source.html  annotated.html  annotated_dup.js  classFilterDialog-members.html  classFilterDialog.html  classFilterDialog.js  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  classModelPart-members.html  classModelPart.html  classModelPart.js  classModelPartList-members.html  classModelPartList.html  classModelPartList.js  classOptionDialog-members.html  classOptionDialog.html  classOptionDialog.js  classVRRenderThread-members.html  classVRRenderThread.html  classVRRenderThread.js  classes.html  files.html  files_dup.js  filterdialog.cpp  (+29 more)
.github/workflows/: doxygen-deploy.yml
Worksheet3/adder_dynamic/inc/: adder.h
Worksheet3/adder_static/lib/: libadder.lib
Worksheet3/inc/: adder.h
Worksheet3/src/: calc.cpp  libadder.exp
Worksheet4/calc_cmake/src/: CmakeLists.txt
Worksheet4/hello_cmake/src/: CmakeLists.txt  hello.cpp
Worksheet5/inc/: adder.h
search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_9.js  functions_b.js  functions_c.js  functions_e.js  pages_0.js  pages_1.js  searchdata.js  variables_1.js  variables_2.js
